--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
+.DS_Store
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # Test binary, built with `go test -c`
 *.test
